Link to module 2 solution

--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,10 @@
 </head>
 <body>
 <h1>Hello Coursera! It's a great course</h1>
-<h3>crazypants</h3>
+
+<h3>Solutions</h3>
+<ul>
+  <li><a href="../module2-solution">Module 2</a></li>
+</ul>
 </body>
 </html>
